2003-01-20  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-GSSetCTM:): Implement.
	(-GSConcatCTM:): Idem.
	(-NSDrawBitmap:::::::::::): Don't flip images in a flipped view.
	Correct scaling of images.

Tue Jan 21 02:08:05 2003  Alexander Malmberg <alexander@malmberg.org>

	* Source/xlib/XGFont.m ([XGFontInfo -dealloc]): Fixed memory leak:
	use XFreeFont(), not XUnloadFont().

2003-01-14  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for GLX_RGBA_TYPE in glx.h

2003-01-14  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xdps/NSDPSContext.m
	Removed unneeded method [xrContext]. Moved context access into
	[createDPSContext] and call [XGServer xrContextForScreen:] instead
	of [XGServer xrContext].

2002-12-31  Adam Fedor  <fedor@gnu.org>

	* Headers/x11/XGOpenGL.h: Redefine BOOL to avoid name collision

2002-11-27  Frederic De Jaeger <dejaeger@free.fr>

	* configure.ac: add the flag --disable-glx.
	* configure: regenerated

2002-11-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XIMInputServer.m
	In [lookupStringForEvent:window:keysym:] autorelease the string,
	so it gets freed late on.
	
2002-11-21  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.3

	* Source/gsc/GSStreamContext.m (-GSSendBezierPath:): Add back and 
	implement.

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	minor correction.

2002-11-21  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSGState.m
	Implemented [GSSendBezierPath:].
	* Source/gsc/GSStreamContext.m
	Removed (empty) implementation of [GSSendBezierPath:].
	* Source/x11/XGServer.m
	Added #ifdef around include of XGOpenGL.h.

2002-11-16  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGGLContext.m (-initWithFormat:shareContext:): Remove
	assert.

	* Source/x11/XGServerWindow.m ([XGServer -setinputstate::]): Return
	if window is NULL.

2002-11-16  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/x11/XGOpenGL.h: Added define to avoid collision of