@@ -1,0 +1,31 @@
+<html>
+
+    <head>
+    <title>Back</title>
+  </head>
+  <body>
+    <br />
+    <h1><a name="title$Back">Back</a></h1>
+    <h3>Authors</h3>
+    <dl>
+      <dt><a href="http://www.gnustep.org/developers/whoiswho.html">Adam Fedor</a>(<a href="mailto:fedor@gnu.org"><code></code></a>)</dt>
+      <dd>
+      </dd>
+    </dl>
+    <p><b>Version:</b> $Revision$</p>
+    <p><b>Date:</b> $Date$</p>
+
+    
+          <h1><a name="001000000000">Back</a></h1>
+    <p>
+
+        Documentation for understanding and writting GUI backends.
+          </p>
+    <ul>
+      <li>
+        <a href="WindowFocus.html">Window Focus</a>
+      </li>
+    </ul>
+    <br />
+  </body>
+</html>
