@@ -1,0 +1,49 @@
+#
+#  Gui gsdoc makefile for the GNUstep Back Library
+#  Copyright (C) 2000 Free Software Foundation, Inc.
+#
+#  Written by:	Adam Fedor <fedor@gnu.org>
+#
+#  This file is part of the GNUstep Back Library.
+#
+#  This library is free software; you can redistribute it and/or
+#  modify it under the terms of the GNU Library General Public
+#  License as published by the Free Software Foundation; either
+#  version 2 of the License, or (at your option) any later version.
+#
+#  This library is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	 See the GNU
+#  Library General Public License for more details.
+#
+#  You should have received a copy of the GNU Library General Public
+#  License along with this library; if not, write to the Free
+#  Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
+
+# Install into the system root by default
+GNUSTEP_INSTALLATION_DIR = $(GNUSTEP_SYSTEM_ROOT)
+
+GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
+
+include $(GNUSTEP_MAKEFILES)/common.make
+
+# The documents to be generated
+DOCUMENT_NAME = Back
+
+Back_AGSDOC_FILES = \
+	Back.gsdoc \
+	WindowFocus.gsdoc
+
+Back_AGSDOC_FLAGS = \
+	-DocumentationDirectory . \
+	-Up Back
+
+Back_DOC_INSTALL_DIR = Developer/Back/Reference
+
+-include GNUmakefile.preamble
+
+-include GNUmakefile.local
+
+include $(GNUSTEP_MAKEFILES)/documentation.make
+
+-include GNUmakefile.postamble
